Added --enable-preview Java argument where required for Java 14 scripts.